--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ futures = { version = "0.3", optional = true }
 # and these libraries would truncate the min support Rust version (MSRV)
 tun-tap = { version = "0.1.3", optional = true }
 etherparse = { version = "0.13.0", optional = true }
+pktparse = "0.7.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows-sys = { version = "0.36.1", features = ["Win32_Foundation", "Win32_Networking_WinSock"] }
